@@ -40,6 +40,8 @@ Core and Builtins
 Library
 -------
 
+- Issue: #15138: base64.urlsafe_{en,de}code() are now 3-4x faster.
+
 - Issue #9527: datetime.astimezone() method will now supply a class
   timezone instance corresponding to the system local timezone when
   called with no arguments.
